#F-160 Fixed Shortcut to save and export data